--- a/Training/app/src/main/AndroidManifest.xml
+++ b/Training/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity">
+        <activity android:name=".SplashActivity" android:theme="@style/AppThemeNoAction">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,9 +28,11 @@
             android:name=".MainActivity"
             android:label="main page" />
         <activity
+            android:theme="@style/AppThemeNoActiongreylight"
             android:name=".RegisterActivity"
             android:label="Register" />
         <activity
+            android:theme="@style/AppThemeNoActiongreylight"
             android:name=".LoginActivity"
             android:label="Login" />
         <activity android:name=".MyCards" />
