--- a/Training/app/build.gradle
+++ b/Training/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:12.0.0'
     compile 'com.google.android.gms:play-services-location:12.0.0'
     compile 'com.google.android.gms:play-services-vision:12.0.0'
+    compile 'com.google.android.gms:play-services:12.0.0'
     compile 'com.android.support:design:26.1.0'
 }
 apply plugin: 'realm-android'
