--- a/Training/app/src/main/AndroidManifest.xml
+++ b/Training/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:theme="@style/AppThemeNoActiongreylight"
             android:name=".SplashActivity"
             >
             <intent-filter>
