--- a/Training/app/build.gradle
+++ b/Training/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -40,7 +42,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:12.0.0'
     compile 'com.google.android.gms:play-services-vision:12.0.0'
     compile 'com.google.android.gms:play-services:12.0.0'
-    compile 'com.android.support:design:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'realm-android'
