--- a/Training/app/src/main/AndroidManifest.xml
+++ b/Training/app/src/main/AndroidManifest.xml
@@ -112,6 +112,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".EditSetting"></activity>
     </application>
 
 </manifest>
