--- a/Training/app/src/main/AndroidManifest.xml
+++ b/Training/app/src/main/AndroidManifest.xml
@@ -3,10 +3,13 @@
     package="com.example.madara.training">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-feature android:name="android.hardware.location.gps" />
+
 
     <application
         android:name=".utils.App"
@@ -113,6 +116,10 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".EditSetting"></activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
     </application>
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 </manifest>
